modified:   .github/workflows/ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,32 +12,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Setup Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
+      # 3. Install dependencies
       - name: Install dependencies
         run: |
           echo "📦 Installing dependencies..."
           python -m pip install --upgrade pip
-          pip install mlflow scikit-learn pandas docker
+          pip install mlflow scikit-learn pandas numpy docker
 
+      # 4. Run MLflow project inside MLProject folder
       - name: Run MLflow project
         working-directory: MLProject
         run: |
-          echo "🚀 Running MLflow project..."
+          echo "🚀 Running MLflow project inside MLProject folder..."
           mlflow run . --env-manager=local
 
+      # 5. Save artifact mlruns
       - name: Save mlruns artifacts
         run: |
           echo "💾 Saving MLflow artifacts..."
-          mkdir -p artifacts
-          cp -r MLProject/mlruns artifacts/ || echo "⚠️ No mlruns directory found."
+          if [ -d "MLProject/mlruns" ]; then
+            mkdir -p artifacts
+            cp -r MLProject/mlruns artifacts/
+            echo "✅ Artifacts copied successfully!"
+          else
+            echo "⚠️ mlruns directory NOT FOUND. Training might have failed."
+          fi
 
+      # 6. Upload artifact to GitHub
       - name: Upload artifact to GitHub
         uses: actions/upload-artifact@v4
         with:
